# NGKsPlayerNative

./: .gitignore  .markdownlintignore  Agent Execution Checklist — Phase 1.txt  CMakeLists.txt  README.md  RUN_PLAYER.cmd  Universal Agent Ruleset.txt  Validated 02_analysis_results.csv  _bridge2_out.txt  _bridge_out.txt  _build_out.txt  _build_out2.txt  _build_out3.txt  _build_run.cmd  _check.txt  _crash_log.txt  _crash_stderr.txt  _plan.txt  _refresh_out.txt  _search_model.py  _temp.cpp  _temp_buildDjModePage.txt  _temp_buildDjModePage2.txt  _temp_buildDjModePage3.txt  _temp_buildDjModePage4.txt  _test.txt  _test_run_3.ps1  _trace_check.txt  bridge_dump.txt  build_graph_build.txt  build_graph_build3.txt  build_graph_build4.txt  build_graph_build5.txt  build_graph_run.txt  build_graph_run2.txt  build_graph_run5.txt  build_log2.txt  build_log3.txt  build_log4.txt  build_out.txt  (+95 more)
.github/: copilot-instructions.md
_proof/: 00_env.txt  00_env_A.txt  00_env_B.txt  01_configure_A.txt  01_configure_B.txt  01_configure_C.txt  02_build_A.txt  02_build_B.txt  02_build_C.txt  03_run_A.txt  03_run_B.txt  03_run_C.txt
analysis_cache/: 2Pac - California Love.analysis.json  3 Doors Down - Here Without You.analysis.json  3 Doors Down - It's Not My Time.analysis.json  3 Doors Down - Kryptonite.analysis.json  AC-DC - Money Talks.analysis.json  AC-DC - Shoot To Thrill.analysis.json  AC-DC - Who Made Who.analysis.json  Aaron Tippin - Working Man's Phd.analysis.json  Adele - Hello.analysis.json  Airbourne - Back In The Game.analysis.json  Airbourne - Blonde, Bad And Beautiful.analysis.json  Avenged Sevenfold - Hail To The King.analysis.json  Big and Rich - Save a Horse Ride a Cowboy.analysis.json  Billy Joel - Pressure.analysis.json  Billy Ray Cyrus - Words By Heart .analysis.json  Blackfoot - Train Train.analysis.json  Blake Shelton - A Guy With A Girl.analysis.json  Bob Marley - Three Little Birds.analysis.json  Boston - More Than A Feeling.analysis.json  Brian Adams - Summer of '69.analysis.json  Buddy Brown  - All a Man Needs.analysis.json  Carrie Underwood - Before He Cheats.analysis.json  Carrie Underwood - Church Bells.analysis.json  Chamillionaire - Ridin' Dirty.analysis.json  Charlie Daniels - A Few More Rednecks.analysis.json  Charlie Daniels - Simple Man.analysis.json  Chase Matthew - County Line.analysis.json  Chicago - Saturday in the Park.analysis.json  Childish Gambino - Redbone.analysis.json  Chris LeDoux - 8 Second Ride.analysis.json  Chris Stapleton - Fire Away.analysis.json  Clint Black - A Good Run Of Bad Luck.analysis.json  Coolio - Fantastic Voyage.analysis.json  Craig Morgan - Almost Home.analysis.json  Craig Morgan - More Trucks Than Cars.analysis.json  Daughtry - Crawling Back To You.analysis.json  Def Leppard - Rock Of Ages .analysis.json  Falco - Rock Me Amadeus.analysis.json  Garret Biggs - Momma Didn't Raise No.analysis.json  Garth Brooks - Ain't Going Down.analysis.json  (+13 more)
data/: .~lock.fix_required_v3  Corrections annotated.xlsx#  .~lock.weak_label_review_clean_v1.csv#  .~lock.weak_label_review_sorted_helper.csv#  analysis_file_index_v1.csv  analysis_progress_log_v1.csv  analysis_run_log_v1.txt  analysis_summary_v1.csv  apply_candidates_v1.csv  apply_results_v1.csv  approved_hybrid_subgenres_v1.csv  artist_overrides.json  audio_analysis_results_v1.csv  authority_coverage_v1.csv  authority_integration_summary_v1.csv  authority_integration_test_v1.csv  authority_reversal_insights_v1.csv  authority_seed_build_v1.csv  authority_seed_v1.csv  batch_closeout_summary_v1.csv  batch_manifest.json  batch_normalization_plan.csv  batch_runbook_v1.txt  benchmark_rebalance_candidates_v2.csv  benchmark_rebalance_plan_v2.csv  benchmark_rebalance_review_v2.csv  block_rule_assessment_v1.csv  blocked_hybrid_taxonomy_cases_v1.csv  blocked_rows_analysis_v1.csv  candidate_recovery_v1.csv  classifier_dataset_multilabel_v1.csv  classifier_dataset_multilabel_v2.csv  classifier_dataset_v1.csv  classifier_dataset_v2_preview.csv  classifier_feature_manifest_v1.csv  classifier_label_mapping_v1.csv  classifier_multilabel_manifest_v2.csv  collision_groups_v2.csv  collision_resolution_plan_v1.csv  crowd_request_search_quality_v1.csv  current_subgenre_audit.csv  (+133 more)
db/: _consolidate_phase16.py  _dump_library.py  _recon_phase15.py  _recon_phase16.py  _recon_phase16_safety.py  aggressive_junk_filter_phase16_5.py  backfill_analysis.py  baseline_genre_classifier.py  batch_closeout_phase14.py  batch_intake_pipeline.py  benchmark_expansion.py  benchmark_rebalance_acquisition.py  blocked_triage_phase8.py  classifier_readiness.py  collision_duplicate_resolver.py  conflict_recovery_phase11.py  controlled_taxonomy_expansion_hybrid.py  decision_export_phase15.py  dj_audio_analysis.py  dj_authority_integration_phase5.py  dj_authority_phase4.py  dj_dashboard_phase2.py  dj_dashboard_phase2_proof.py  dj_launcher_phase3_proof.py  dj_library_core_phase1.py  dj_library_launcher_phase3.py  dj_musicbrainz.py  dj_review_workstation_validation.py  feature_genre_analysis.py  genre_benchmark_curation.py  (+32 more)
(+220 files in other folders)
